--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 </div>
 </div> 
 
-<div style="text-align: center; margin-top: 20px;">
-  <img src="https://u.cubeupload.com/Hater/20250623193025.jpg" alt="Love Art" style="max-width: 100%; height: auto; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.3);">
+<div class="art-image">
+  <img src="https://u.cubeupload.com/Hater/20250623193025.jpg" alt="Love Art">
 </div>
 
 <script src="https://assets.tumblr.com/client/prod/standalone/tumblelog/index.build.js?_v=0c38ea772dfcf026d9fa4f6245753118"></script>
