--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
             </a>
 
              <a target="_blank" href="https://xat.me/iLimerences" title="Limerences">
-                <i class="iconsax" icon-name="heart-circle"></i>
+                <i class="iconsax" icon-name="heart"></i>
             </a>
       
       <a target="_blank" href="https://xat.me/Mumukshutva" title="Mumu">
-                <i class="iconsax" icon-name="heart-circle"></i>
+                <i class="iconsax" icon-name="heart"></i>
             </a>
             
     </div>
